Added a URL Variable toggle for the soundslist command in case someone wants to have it separate in Nightbot or otherwise

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,14 @@
 /Sounds/wtfisthat.mp3
 /Sounds/yeet.mp3
 /Sounds/youstupid.mp3
+/Sounds/Purge.mp3
+/Sounds/Scream.mp3
+/Sounds/TryMeBitch.mp3
+/Sounds/Yas.mp3
+/Sounds/alreadydead.mp3
+/Sounds/hoesmad.mp3
+/Sounds/listenhere.mp3
+/Sounds/morevulgar.mp3
+/Sounds/wap.mp3
+/Sounds/wapremix.mp3
+/Sounds/whoresinthishouse.mp3
