Added autoLogin url var

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@
 /Sounds/whoresinthishouse.mp3
 /Sounds/fuckaninja.mp3
 /Sounds/whymad.mp3
+/Sounds/gonnacum.mp3
+/Sounds/water.mp3
+/Sounds/ugandaclick.mp3
